--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,8 +7,8 @@
     <title>Admin panel</title>
 </head>
 <body>
-    <section>
-        
-    </section>
+      <section class="Dashboard">
+          
+      </section>
 </body>
 </html>
