--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -5,7 +5,13 @@
             <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
         </svg>
         <h2>Menu</h2>
-
+        <h1>Classic Neet Academy Admin Dashboard</h1>
+        <img src="images/home/classic-nee-tacademy-logo.png" alt="" class="user">
+        <div>
+            <h2>superadmin</h2>
+            <p>signout</p>
+        </div>
+        
     </div>
     <ul>
         <div class="home">
@@ -65,10 +71,5 @@
             </span>
         </div>
   </ul>
-    <div class="heading">
-        <h1>Classic Neet Academy Admin Dashboard</h1>
-        <img src="image\home\img1.jpeg" alt="" class="user">
-        <p>superadmin</p>
-        <p>signout</p>
-    </div>
+   
 </header>
