--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -1,7 +1,7 @@
 <!-- Header session -->
 <header>
     <div class="Menu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="white">
             <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
         </svg>
         <h2>Menu</h2>
@@ -13,6 +13,7 @@
         </div>
         
     </div>
+    <section class="MenuBar">
     <ul>
         <div class="home">
             <li class=""><a href=""><b>Home</b></a></li>
@@ -71,5 +72,5 @@
             </span>
         </div>
   </ul>
-   
+   </section> 
 </header>
