--- a/public/stylesheets/adminheader.css
+++ b/public/stylesheets/adminheader.css
@@ -8,6 +8,8 @@
 }
 body{
     background: linear-gradient(#0061FF,#60EFFF);
+    width: 100%;
+    height: 100vh;
 }
 h1,
 h2,
@@ -16,26 +18,26 @@ h4 {
 	font-family: 'Poppins', sans-serif;
     color: white;
 }
-p{
-    color: white;
+p,a{
+   color: white;
 }
 /* Menu Bar */
 .Menu{
     display: flex;
     width: 100%;
     height: 10vh;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #fff;
     
 }
 .Menu svg{
     width: 50px;
-    height: 50px;
+    height: 40px;
     margin: 2%;
 }
 .Menu h2{
     font-size: 25px;
     position: absolute;
-    top: 5%;
+    top: 4%;
     left: 6%;
 }
 .Menu h1{
@@ -43,27 +45,31 @@ p{
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 29%;
-    top: 4%;
+    left: 27%;
+    top: 3%;
 }
 .Menu img{
     border-radius: 50%;
     background-color: #fff;
-    /* top: 2%; */
-    /* left: 70%; */
+    position: absolute;
+    top: 1%; 
+    left: 84%;
     width: 50px;
     height: 50px;
 }  
 .Menu div h2{
     font-size: 20px;
     position: absolute;
-    top: 5%;
-    left: 85%;
+    top: 3%;
+    left: 89%;
 }
 .Menu div p{
     font-size: 15px;
     position: absolute;
-    top: 10%;
-    left: 80%;
-    text-decoration: white;
+    top: 7%;
+    left: 84%;
+    text-decoration: underline;
+}
+.MenuBar{
+    border-left-width: 2px solid #fff;
 }
