--- a/views/home.ejs
+++ b/views/home.ejs
@@ -150,7 +150,7 @@
 </section>
 
 <section class="neet-toppers">
-	<h1>Neet 2020 Toppers</h1>
+	<h1>Our Toppers</h1>
 	<div class="topper-card-container">
 		<div class="topper-card">
 			<span class="topper-image_1"></span>
