--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -16,59 +16,59 @@
     <section class="MenuBar">
     <ul>
         <div class="home">
-            <li class=""><a href=""><b>Home</b></a></li>
+            <li class=""><a href=""><h4>Home</h4></a></li>
             <span>
-                <li class=""><a href=""><b>slider revolution</b></a></li>
-                <li class=""><a href=""><b>latest Updates</b></a></li>
-                <li class=""><a href=""><b>calendar</b></a></li>
-                <li class=""><a href=""><b>Neet 2020 toppers</b></a></li>
-                <li class=""><a href=""><b>Neet Achievements</b></a></li>
-                <li class=""><a href=""><b>students testimonials</b></a></li>
+                <li class=""><a href="">slider revolution</a></li>
+                <li class=""><a href="">latest Updates</a></li>
+                <li class=""><a href="">calendar</a></li>
+                <li class=""><a href="">Our toppers</a></li>
+                <li class=""><a href="">Neet Achievements</a></li>
+                <li class=""><a href="">students testimonials</a></li>
             </span>
         </div>
         <div class="courses">
-            <li class=""><a href=""><b>courses</b></a></li>
+            <li class=""><a href=""><h4>courses</h4></a></li>
             <span>
-                <li class=""><a href=""><b>courses Neet</b></a></li>
-                <li class=""><a href=""><b>courses jee</b></a></li>
-                <li class=""><a href=""><b>courses iit & medical</b></a></li>
+                <li class=""><a href="">courses Neet</a></li>
+                <li class=""><a href="">courses jee</a></li>
+                <li class=""><a href="">courses iit & medical</a></li>
             </span>
         </div>
-        <div class="About Us">
-            <li class=""><a href=""><b>About Us</b></a></li>
+        <div class="AboutUs">
+            <li class=""><a href=""><h4>About Us</h4></a></li>
             <span>
-                <li class=""><a href=""><b>History</b></a></li>
-                <li class=""><a href=""><b>Our Leaders</b></a></li>
+                <li class=""><a href="">History</a></li>
+                <li class=""><a href="">Our Leaders</a></li>
             </span>
         </div>
-        <div class="Demo Videos">
-            <li class=""><a href=""><b>Demo Videos</b></a></li>
+        <div class="DemoVideos">
+            <li class=""><a href=""><h4>Demo Videos</h4></a></li>
             <span>
-                <li class=""><a href=""><b>videos</b></a></li>
+                <li class=""><a href="">videos</a></li>
             </span>
         </div>
-        <div class="Success Stories">
-            <li class=""><a href=""><b>Success Stories</b></a></li>
+        <div class="SuccessStories">
+            <li class=""><a href=""><h4>Success Stories</h4></a></li>
             <span>
-                <li class=""><a href=""><b>Image</b></a></li>
-                <li class=""><a href=""><b>Videos</b></a></li>
+                <li class=""><a href="">Image</a></li>
+                <li class=""><a href="">Videos</a></li>
             </span>
         </div>
         <div class="Results">
-            <li class=""><a href=""><b>Results</b></a></li>
+            <li class=""><a href=""><h4>Results</h4></a></li>
             <span>
-                <li class=""><a href=""><b>Image</b></a></li>
-                <li class=""><a href=""><b>Name</b></a></li>
-                <li class=""><a href=""><b>Neet scores</b></a></li>
-                <li class=""><a href=""><b>Collage Group</b></a></li>
+                <li class=""><a href="">Image</a></li>
+                <li class=""><a href="">Name</a></li>
+                <li class=""><a href="">Neet scores</a></li>
+                <li class=""><a href="">Collage Group</a></li>
             </span>
         </div>
-        <div class="Contact Us">
-            <li class=""><a href=""><b>Contact Us</b></a></li>
+        <div class="ContactUs">
+            <li class=""><a href=""><h4>Contact Us</h4></a></li>
             <span>
-                <li class=""><a href=""><b>Name</b></a></li>
-                <li class=""><a href=""><b>Phone number</b></a></li>
-                <li class=""><a href=""><b>Message</b></a></li>
+                <li class=""><a href="">Name</a></li>
+                <li class=""><a href="">Phone number</a></li>
+                <li class=""><a href="">Message</a></li>
             </span>
         </div>
   </ul>
