--- a/public/stylesheets/adminheader.css
+++ b/public/stylesheets/adminheader.css
@@ -9,7 +9,7 @@
 body{
     background: linear-gradient(#0061FF,#60EFFF);
     width: 100%;
-    height: 100vh;
+    height: 101vh;
 }
 h1,
 h2,
@@ -70,6 +70,51 @@ p,a{
     left: 84%;
     text-decoration: underline;
 }
+/* Menubar */
 .MenuBar{
-    border-left-width: 2px solid #fff;
+    border-right: 2px solid #fff;
+    width: 17%;
+    display: flex;
+    position: relative;
+	justify-content: space-around;
+    align-items: center;
+	min-height:90vh;
+	font-size: 20px;
+}
+.MenuBar a{
+    text-decoration: none;
+}
+.MenuBar li{
+    list-style: none;
+}
+.home span{
+    position: relative;
+    left: 13%;
+}
+.courses span{
+    position: relative;
+    left: 13%;
+}
+.AboutUs span{
+    position: relative;
+    left: 13%;
+}
+.DemoVideos span{
+    position: relative;
+    left: 13%;
+}
+.SuccessStories span{
+    position: relative;
+    left: 13%;
+}
+.Results span{
+    position: relative;
+    left: 13%;
+}
+.ContactUs span{
+    position: relative;
+    left: 13%;
+}
+h3{
+    text-transform: uppercase;
 }
