--- a/views/successStories.ejs
+++ b/views/successStories.ejs
@@ -9,7 +9,50 @@
 	</head>
 	<body>
 		<section class="section1">
-			<div class="circle"></div>
+			<div class="circle">
+				<div class="profile_container">
+					<div class="profile">
+						<img src="images\successStories\success_img_1.png" alt="" />
+						<div class="profile_details">
+							<p>Hello, I'm Maya</p>
+							<p>Score: 197/200</p>
+							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+						</div>
+					</div>
+					<div class="profile">
+						<img src="images\successStories\success_img_2.png" alt="" />
+						<div class="profile_details">
+							<p>Hello, I'm Maya</p>
+							<p>Score: 197/200</p>
+							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+						</div>
+					</div>
+					<div class="profile">
+						<img src="images\successStories\success_img_3.png" alt="" />
+						<div class="profile_details">
+							<p>Hello, I'm Maya</p>
+							<p>Score: 197/200</p>
+							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+						</div>
+					</div>
+					<div class="profile">
+						<img src="images\successStories\success_img_4.png" alt="" />
+						<div class="profile_details">
+							<p>Hello, I'm Maya</p>
+							<p>Score: 197/200</p>
+							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+						</div>
+					</div>
+					<div class="profile">
+						<img src="images\successStories\success_img_5.png" alt="" />
+						<div class="profile_details">
+							<p>Hello, I'm Maya</p>
+							<p>Score: 197/200</p>
+							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
