--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,12 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin panel</title>
     <link rel="stylesheet" href="stylesheets/adminheader.css"/>
+    <link rel="stylesheet" href="stylesheets/admin.css"/>
 
 </head>
 <body>
     <%- include('./layout/adminheader') %>
-    <section class="Dashboard">
-          
-    </section>
+    <section class="dashboard">
+    <div class="MenuBar">
+        <ul>
+            <div class="home">
+                <li class=""><a href=""><h4>HOME</h4></a></li>
+                <span>
+                    <li class=""><a href="">slider revolution</a></li>
+                    <li class=""><a href="">latest Updates</a></li>
+                    <li class=""><a href="">calendar</a></li>
+                    <li class=""><a href="">Our toppers</a></li>
+                    <li class=""><a href="">Neet Achievements</a></li>
+                    <li class=""><a href="">students testimonials</a></li>
+                </span>
+            </div>
+            <div class="courses">
+                <li class=""><a href=""><h4>COURSES</h4></a></li>
+                <span>
+                    <li class=""><a href="">courses Neet</a></li>
+                    <li class=""><a href="">courses jee</a></li>
+                    <li class=""><a href="">courses iit & medical</a></li>
+                </span>
+            </div>
+            <div class="AboutUs">
+                <li class=""><a href=""><h4>ABOUT US</h4></a></li>
+                <span>
+                    <li class=""><a href="">History</a></li>
+                    <li class=""><a href="">Our Leaders</a></li>
+                </span>
+            </div>
+            <div class="DemoVideos">
+                <li class=""><a href=""><h4>DEMO VIDEOS</h4></a></li>
+                <span>
+                    <li class=""><a href="">videos</a></li>
+                </span>
+            </div>
+            <div class="SuccessStories">
+                <li class=""><a href=""><h4>SUCCESS STORIES</h4></a></li>
+                <span>
+                    <li class=""><a href="">Image</a></li>
+                    <li class=""><a href="">Videos</a></li>
+                </span>
+            </div>
+            <div class="Results">
+                <li class=""><a href=""><h4>RESULTS</h4></a></li>
+                <span>
+                    <li class=""><a href="">Image</a></li>
+                    <li class=""><a href="">Name</a></li>
+                    <li class=""><a href="">Neet scores</a></li>
+                    <li class=""><a href="">Collage Group</a></li>
+                </span>
+            </div>
+            <div class="ContactUs">
+                <li class=""><a href=""><h4>CONTACT US</h4></a></li>
+                <span>
+                    <li class=""><a href="">Name</a></li>
+                    <li class=""><a href="">Phone number</a></li>
+                    <li class=""><a href="">Message</a></li>
+                </span>
+            </div>
+      </ul>
+    </div> 
+    <div class="Homepage">
+          <div class="sliderrevolution">
+            <h2>Slider Revolution</h2> 
+            	<div class="grid">
+                    <div class="grid-item item1">Current Images</div>
+                    <div class="grid-item item2">New Image</div>
+                    <div class="grid-item item3">Updates</div>
+                </div>
+                <div class="subbutton">
+                    <button type="button">Submit</button>
+                </div>
+          </div>
+    </section>   
 </body>
 </html>
