--- a/views/sqlreg.ejs
+++ b/views/sqlreg.ejs
@@ -20,6 +20,6 @@
      
       <button type="submit">Submit</button>
     </form>
-    <img src="data:image/jpg;base64/<%= img %>" alt="image">
+    <!-- <img src="data:image/jpg;base64/<%= img %>" alt="image"> -->
 </body>
 </html>
