--- a/views/cloudinary.ejs
+++ b/views/cloudinary.ejs
@@ -7,9 +7,10 @@
 		<title>Cloudinary</title>
 	</head>
 	<body>
-		<form action="/" method="POST" enctype="multipart/form-data">
-			<input type="file" id="image" name="image" required />
-			<input type="submit" value="" />
+		<form action="/homeslider" method="POST" enctype="multipart/form-data" >
+			<label for="sliderimg">Select A Image</label>
+			<input type="file" id="image" name="sliderimg" required />
+			<input type="submit" value="Submit" />
 		</form>
 	</body>
 </html>
