--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,7 +19,6 @@
                 <span>
                     <li class=""><a href="">slider revolution</a></li>
                     <li class=""><a href="">latest Updates</a></li>
-                    <li class=""><a href="">calendar</a></li>
                     <li class=""><a href="">Our toppers</a></li>
                     <li class=""><a href="">Neet Achievements</a></li>
                     <li class=""><a href="">students testimonials</a></li>
@@ -75,12 +74,65 @@
     <div class="Homepage">
           <div class="sliderrevolution">
             <h2>Slider Revolution</h2> 
-            	<div class="grid">
-                    <div class="grid-item item1">Current Images</div>
-                    <div class="grid-item item2">New Image</div>
-                    <div class="grid-item item3">Updates</div>
+            	<div class="grid1">
+                    <div class="grid-item1 item1">Current Images</div>
+                    <div class="grid-item1 item2">New Image</div>
+                    <div class="grid-item1 item3">Updates</div>
                 </div>
-                <div class="subbutton">
+                <div class="subbutton1">
+                    <button type="button">Submit</button>
+                </div>
+          </div>
+          <div class="Latestupdates">
+            <h2>Latest updates</h2> 
+            	<div class="grid2">
+                    <div class="grid-item2 item1">Current Link</div>
+                    <div class="grid-item2 item2">Updates</div>
+                </div>
+                <div class="subbutton2">
+                    <button type="button">Submit</button>
+                </div>
+          </div>
+          <div class="OurToppers">
+            <h2>OurToppers</h2> 
+            	<div class="grid3">
+                    <div class="grid-item3 item1">Name</div>
+                    <div class="grid-item3 item2">Score</div>
+                    <div class="grid-item3 item3">Collage Name</div>
+                    <div class="grid-item3 item4">Image</div>
+                    <div class="grid-item3 item5">Update</div>
+                </div>
+                <div class="subbutton3">
+                    <button type="button">Submit</button>
+                </div>
+          </div>
+          <div class="NeetAchievements">
+            <h2>Neet Achievements</h2> 
+            	<div class="grid4">
+                    <div class="grid-item4 item1">Current Image</div>
+                    <div class="grid-item4 item2">New Image</div>  
+                    <div class="grid-item4 item3">MBBS Seat</div>
+                    <div class="grid-item4 item4">Consecutive Years</div>
+                    <div class="grid-item4 item5">Success rate</div>
+                    <div class="grid-item4 item6">No. of Admission</div>
+                    <div class="grid-item4 item7">Update</div>
+                </div>
+                <div class="subbutton4">
+                    <button type="button">Submit</button>
+                </div>
+          </div>
+          <div class="Students testimonials">
+            <h2>Students testimonials</h2> 
+            	<div class="grid5">
+                    <div class="grid-item5 item1">Current Image</div>
+                    <div class="grid-item5 item2">New Image</div>  
+                    <div class="grid-item5 item4">Name</div>
+                    <div class="grid-item5 item5">Content</div>
+                    <div class="grid-item5 item6">Success rate</div>
+                    <div class="grid-item5 item7">No. of Admission</div>
+                    <div class="grid-item5 item3">Update</div>
+                </div>
+                <div class="subbutton4">
                     <button type="button">Submit</button>
                 </div>
           </div>
