--- a/public/stylesheets/adminheader.css
+++ b/public/stylesheets/adminheader.css
@@ -6,9 +6,9 @@
 	user-select: none;
 }
 body{
-    background: linear-gradient(#0061FF,#60EFFF);
+    background:#0095ec ;
     width: 100%;
-    height: 101vh;
+    height: 800vh;
 }
 h1,
 h2,
