--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,19 +17,19 @@
             <div class="home">
                 <li class=""><a href=""><h4>HOME</h4></a></li>
                 <span>
-                    <li class=""><a href="">slider revolution</a></li>
-                    <li class=""><a href="">latest Updates</a></li>
-                    <li class=""><a href="">Our toppers</a></li>
+                    <li class=""><a href="">Slider Revolution</a></li>
+                    <li class=""><a href="">Latest Updates</a></li>
+                    <li class=""><a href="">Our Toppers</a></li>
                     <li class=""><a href="">Neet Achievements</a></li>
-                    <li class=""><a href="">students testimonials</a></li>
+                    <li class=""><a href="">Students Testimonials</a></li>
                 </span>
             </div>
             <div class="courses">
                 <li class=""><a href=""><h4>COURSES</h4></a></li>
                 <span>
-                    <li class=""><a href="">courses Neet</a></li>
-                    <li class=""><a href="">courses jee</a></li>
-                    <li class=""><a href="">courses iit & medical</a></li>
+                    <li class=""><a href="">Courses Neet</a></li>
+                    <li class=""><a href="">Courses jee</a></li>
+                    <li class=""><a href="">Courses iit & medical</a></li>
                 </span>
             </div>
             <div class="AboutUs">
@@ -42,7 +42,7 @@
             <div class="DemoVideos">
                 <li class=""><a href=""><h4>DEMO VIDEOS</h4></a></li>
                 <span>
-                    <li class=""><a href="">videos</a></li>
+                    <li class=""><a href="">Videos</a></li>
                 </span>
             </div>
             <div class="SuccessStories">
@@ -57,7 +57,7 @@
                 <span>
                     <li class=""><a href="">Image</a></li>
                     <li class=""><a href="">Name</a></li>
-                    <li class=""><a href="">Neet scores</a></li>
+                    <li class=""><a href="">Neet Scores</a></li>
                     <li class=""><a href="">Collage Group</a></li>
                 </span>
             </div>
@@ -65,7 +65,7 @@
                 <li class=""><a href=""><h4>CONTACT US</h4></a></li>
                 <span>
                     <li class=""><a href="">Name</a></li>
-                    <li class=""><a href="">Phone number</a></li>
+                    <li class=""><a href="">Phone Number</a></li>
                     <li class=""><a href="">Message</a></li>
                 </span>
             </div>
