--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,10 +34,9 @@
 				</div> -->
 				<% img.forEach(image => { %>
 				 <div class="swiper-slide slide4">
-					<img class="swiper1img" src="https://res.cloudinary.com/duziczmgw/image/upload/v1633515541/ClassicNeetAcademy/z81t8xtujlvqknv0cif" alt="" />
+					<img class="swiper1img slide1" src='<%=image.sliderimg%>'  alt="" />
 				</div>
 				<% }) %>
-
 
 			</div>
 			<!-- <div class="swiper-button-next"></div>
@@ -347,3 +346,5 @@
 	</body>
 	
 	</html>
+
+
