--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -8,7 +8,6 @@
 .MenuBar{
     border-right: 2px solid #fff;
     width: 17%;
-    height: 10vh;
     display: flex;
     position: absolute;
 	font-size: 20px;
@@ -95,7 +94,9 @@
 	width: 23vw;
     font-size: 20px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 	box-shadow: 0px 0px 0px 2px;
     color: #fff;
 }
