--- a/views/successStories.ejs
+++ b/views/successStories.ejs
@@ -17,6 +17,10 @@
 							<p>Hello, I'm Maya</p>
 							<p>Score: 197/200</p>
 							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+							<span>
+								<img
+									src="https://img.icons8.com/color/96/000000/youtube-play.png"
+							/></span>
 						</div>
 					</div>
 					<div class="profile">
@@ -25,6 +29,10 @@
 							<p>Hello, I'm Maya</p>
 							<p>Score: 197/200</p>
 							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+							<span>
+								<img
+									src="https://img.icons8.com/color/96/000000/youtube-play.png"
+							/></span>
 						</div>
 					</div>
 					<div class="profile">
@@ -33,6 +41,10 @@
 							<p>Hello, I'm Maya</p>
 							<p>Score: 197/200</p>
 							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+							<span>
+								<img
+									src="https://img.icons8.com/color/96/000000/youtube-play.png"
+							/></span>
 						</div>
 					</div>
 					<div class="profile">
@@ -41,6 +53,10 @@
 							<p>Hello, I'm Maya</p>
 							<p>Score: 197/200</p>
 							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+							<span>
+								<img
+									src="https://img.icons8.com/color/96/000000/youtube-play.png"
+							/></span>
 						</div>
 					</div>
 					<div class="profile">
@@ -49,6 +65,10 @@
 							<p>Hello, I'm Maya</p>
 							<p>Score: 197/200</p>
 							<p>A.M.S. Matriculation. Higher.Secondary. School</p>
+							<span>
+								<img
+									src="https://img.icons8.com/color/96/000000/youtube-play.png"
+							/></span>
 						</div>
 					</div>
 				</div>
