--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -81,8 +81,20 @@
                             <p><%= image.imgname + parseInt(index+1) %></p>
                         <% }) %>
                     </div>
-                    <div class="grid-item1 item2"><p>New Image</p> </div>
-                    <div class="grid-item1 item3"><p>Updates</p> </div>
+                    <div class="grid-item1 item2">
+                        <p>New Image</p> 
+                        <input type="file" id="image" name="sliderimg" required />
+                        <input type="file" id="image" name="sliderimg" required />
+                        <input type="file" id="image" name="sliderimg" required />
+                        <input type="file" id="image" name="sliderimg" required />
+                    </div>
+                    <div class="grid-item1 item3">
+                        <p>Updates</p> 
+                        <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;" />
+                        <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
+                        <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
+                        <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
+                    </div>
                 </div>
                 <div class="subbutton1">
                     <button type="button">Submit</button>
