--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,24 +21,7 @@
 	<section class="swipersection">
 		<div class="swiper mySwiper">
 			<div class="swiper-wrapper">
-				<!-- <div class="swiper-slide slide1">
-					<img class="swiper1img" src="images/home/sliderimage1.jpg" alt="" />
-				</div>
-				<div class="swiper-slide slide2">
-					<img class="swiper1img" src="images/home/sliderimage2.jpg" alt="" />
-				</div>
-				<div class="swiper-slide slide3">
-					<img class="swiper1img" src="images/home/sliderimage4.jpg" alt="" />
-	
-				</div>
-				<div class="swiper-slide slide4">
-					<img class="swiper1img" src="images/home/sliderimage3.jpg" alt="" />
-				</div> -->
-				<% img.forEach(image => { %>
-				 <div class="swiper-slide slide4">
-					<img class="swiper1img slide1" src='<%=image.sliderimg%>'  alt="" />
-				</div>
-				<% }) %>
+		
 
 			</div>
 			<!-- <div class="swiper-button-next"></div>
@@ -340,7 +323,7 @@
 
 	   </section>
 
-    	<%- include('./layout/footer') %>
+    	<!-- <%- include('./layout/footer') %> -->
 
         <script src="javascripts/index.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
