--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -121,7 +121,7 @@
                     <button type="button">Submit</button>
                 </div>
           </div>
-          <div class="Students testimonials">
+          <!-- <div class="Students testimonials">
             <h2>Students testimonials</h2> 
             	<div class="grid5">
                     <div class="grid-item5 item1">Current Image</div>
@@ -135,7 +135,7 @@
                 <div class="subbutton4">
                     <button type="button">Submit</button>
                 </div>
-          </div>
+          </div> -->
     </section>   
 </body>
 </html>
