--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,5 @@
-	<!-- footer section -->
+<link rel="stylesheet" href="stylesheets/common.css">
+<!-- footer section -->
 <footer>
 			<img class="footer_svg_1" src="images/home/footer_svg_1.png" alt="">
 			<img class="footer_svg_2" src="images/home/footer_svg_2.png" alt="">
