--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,23 @@
 			<section class="swipersection">
 				
 				<div class="swiper-wrapper">
+					<!-- <div class="flexTop">
+						<div  class="flexContent">Neet</div>
+						<div class="flexContent">IIT & Medical<br>Foundation</div>
+						<div class="flexContent">IIT-JEE</div>
+					</div> -->
+					<div class="left">
+						<div class="spilldiv">
+							<img class="spill " src="images/home/spill.png" alt="">
+						</div>
+						<div class="spilldiv1">
+							<img class="spill1" src="images/home/spill1.png" alt="">
+						</div>
+						<div class="spill2">
+							<img class="spill2" src="images/home/spill2.png" alt="">
+						</div>
+					</div>
+					
 					
 					<!-- <div class="swiper-slide slide1">
 						<img class="swiper1img" src="images/home/sliderimage1.jpg" alt="" />
@@ -53,6 +70,7 @@
 					</marquee>
 				</section>
 			</section>
+			
 			
 			<section class="section-2">
 				<div class="div-2">
@@ -105,7 +123,7 @@
 	<!-- </div> -->
 	</section>
 	<section class="Hexagon" id="courses">
-		<div class="left">
+		<!-- <div class="left">
 			<div class="spilldiv">
 				<img class="spill " src="images/home/spill.png" alt="">
 			</div>
@@ -115,19 +133,33 @@
 			<div class="spill2">
 				<img class="spill2" src="images/home/spill2.png" alt="">
 			</div>
-		</div>
+		</div> -->
 
-		<div class="right">
-			<div class="hexadiv1 hexadiv">
+		<!-- <div class="right">
+			<div class="card1">
 				<img class="hexa1 hexa" src="images/home/hexa1.png" alt="">
 				<h3>NEET</h3>
 			</div>
-			<div class="hexadiv2 hexadiv">
+			<div class="card2">
 				<img class="hexa2 hexa" src="images/home/hexa2.png" alt="">
 				<h3>IIT & Medical<br>Foundation</h3>
 			</div>
-			<div class="hexadiv3 hexadiv">
+			<div class="card3">
 				<img class="hexa3 hexa" src="images/home/hexa3.png" alt="">
+				<h3>IIT-JEE</h3>
+			</div>
+		</div>  -->
+		<div class="right">
+			<div class="card1">
+				<img class="hexaimg" src="images/home/hexa1.png" alt="">
+				<h3>NEET</h3>
+			</div>
+			<div class="card2">
+				<img class="hexaimg" src="images/home/hexa2.png" alt="">
+				<h3>IIT & Medical<br>Foundation</h3>
+			</div>
+			<div class="card3">
+				<img class="hexaimg" src="images/home/hexa3.png" alt="">
 				<h3>IIT-JEE</h3>
 			</div>
 		</div>
