--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -9,82 +9,6 @@
 	</head>
 	<body>
 		<%- include('./layout/header') %>
-		<!-- <div class="findus">
-			<h1>Find Us Through</h1>
-		</div>
-		<div class="contact-container">
-			<div class="location">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					viewBox="0 0 20 20"
-					class="contact-icon"
-					fill="currentColor"
-				>
-					<path
-						fill-rule="evenodd"
-						d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-						clip-rule="evenodd"
-					/>
-				</svg>
-				<p>
-					1/1, First Floor, PS Square, KHS Hospital Road, Opp. to Ponnuswamy
-					Gounder Kalyana Mandapam, Salem - 4
-				</p>
-			</div>
-			<div class="phone">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					class="contact-icon"
-					viewBox="0 0 20 20"
-					fill="currentColor"
-				>
-					<path
-						d="M14.414 7l3.293-3.293a1 1 0 00-1.414-1.414L13 5.586V4a1 1 0 10-2 0v4.003a.996.996 0 00.617.921A.997.997 0 0012 9h4a1 1 0 100-2h-1.586z"
-					/>
-					<path
-						d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
-					/>
-				</svg>
-				<p>+91-78670 14165</p>
-			</div>
-			<div class="email">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					class="contact-icon"
-					viewBox="0 0 20 20"
-					fill="currentColor"
-				>
-					<path
-						d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
-					/>
-					<path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
-				</svg>
-				<p>info@classicneetacademy.com</p>
-			</div>
-		</div>
-		<div class="form-container">
-			<p>
-				If you have any questions, regarding the courses. Please do fill this
-				form, we will revert you shortly.
-			</p>
-			<form action="/contactus" method="post">
-				<div class="input-container">
-					<label for="name">Name:</label>
-					<input type="text" name="name" id="name" />
-				</div>
-				<div class="input-container">
-					<label for="phone">Phone number:</label>
-					<input type="text" name="phone" id="phone" />
-				</div>
-				<div class="textarea-container">
-					<label for="message">Message:</label>
-					<textarea name="message" id="message"></textarea>
-				</div>
-				<div class="buttons-container">
-                    <button>Submit</button><button>Reset</button>
-				</div>
-			</form>
-		</div> -->
 		<section class="enquire-form-container">
 			<div>
 				<div class="left">
@@ -143,31 +67,55 @@
 				</div>
 				<div class="right">
 					<h1>Enquiry Form</h1>
-					<form action="/contactus" method="POST">
+					<form action="mailto:info@classicneetacademy.com" method="POST">
 						<div class="input-container">
 							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
+							<input
+								type="text"
+								name="name"
+								class="form-input"
+								id="name"
+								required
+							/>
 						</div>
 						<div class="input-container">
 							<label for="phone">Phone number</label>
-							<input type="text" name="phone" id="phone" />
+							<input
+								type="text"
+								name="phone"
+								class="form-input"
+								id="phone"
+								required
+							/>
 						</div>
 						<div class="input-container">
 							<label for="phone">Email</label>
-							<input type="text" name="email" id="email" />
+							<input
+								type="text"
+								name="email"
+								class="form-input"
+								id="email"
+								required
+							/>
 						</div>
 						<div class="textarea-container">
 							<label for="message">Message</label>
-							<textarea name="message" id="message"></textarea>
+							<textarea
+								name="message"
+								class="form-input"
+								id="message"
+								required
+							></textarea>
 						</div>
 						<div class="button-container">
 							<button>Submit</button>
-							<button>Reset</button>
+							<button class="reset">Reset</button>
 						</div>
 					</form>
 				</div>
 			</div>
 		</section>
 		<%- include('./layout/footer') %>
+		<script src="javascripts/contactus.js"></script>
 	</body>
 </html>
