--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -99,7 +99,7 @@
 							/>
 						</div>
 						<div class="textarea-container">
-							<label for="message">Message</label>
+							<label for="message">Comment</label>
 							<textarea
 								name="message"
 								class="form-input"
