--- a/views/home.ejs
+++ b/views/home.ejs
@@ -122,7 +122,7 @@
 				</div>
 	<!-- </div> -->
 	</section>
-	<section class="Hexagon" id="courses">
+	<section class="HexagonDiv">
 		<!-- <div class="left">
 			<div class="spilldiv">
 				<img class="spill " src="images/home/spill.png" alt="">
@@ -149,19 +149,40 @@
 				<h3>IIT-JEE</h3>
 			</div>
 		</div>  -->
-		<div class="right">
-			<div class="card1">
-				<img class="hexaimg" src="images/home/hexa1.png" alt="">
-				<h3>NEET</h3>
+
+		<div class="cardsDiv">
+			<div class="box1">
+					<img class="hexaimg" src="images/home/hexa1.png" alt="">
+					<div class="imgContent">
+						<h3 class="imgHeader">NEET</h3>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+					</div>
 			</div>
-			<div class="card2">
+			<div class="box2">
+					<img class="hexaimg" src="images/home/hexa2.png" alt="">
+					<div class="imgContent">
+						<h3 class="imgHeader">NEET</h3>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+					</div>
+			</div>
+			<div class="box3">
+					<img class="hexaimg" src="images/home/hexa3.png" alt="">
+					<div class="imgContent">
+						<h3 class="imgHeader">NEET</h3>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+					</div>
+			</div>
+			<!-- <div class="box2">
 				<img class="hexaimg" src="images/home/hexa2.png" alt="">
-				<h3>IIT & Medical<br>Foundation</h3>
+				<h3 class="imgHeader">IIT & Medical<br>Foundation</h3>
+				<div class="imgContent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</div>
 			</div>
-			<div class="card3">
+			<div class="box3">
+				
 				<img class="hexaimg" src="images/home/hexa3.png" alt="">
-				<h3>IIT-JEE</h3>
-			</div>
+				<h3 class="imgHeader">IIT-JEE</h3>
+				<div class="imgContent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</div>
+			</div> -->
 		</div>
 
 	</section>
