--- a/views/home.ejs
+++ b/views/home.ejs
@@ -364,7 +364,7 @@
 	</section>
 
 
-	<!-- <%- include('./layout/footer') %> -->
+	 <%- include('./layout/footer') %> 
 	</div>
 	<script src="javascripts/index.js"></script>
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
