--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,6 +31,10 @@
 						<div class="flexContent">IIT-JEE</div>
 					</div> -->
 					<div class="left">
+						
+						<img class="building" src="images/build.png" alt="">
+						<img class="building2" src="images/build2.png" alt="">
+						<img class="building3" src="images/build3.png" alt="">
 						<div class="spilldiv">
 							<img class="spill " src="images/home/spill.png" alt="">
 						</div>
